# MD-SP-API

./: .gitignore  main.py  old main.py  pyproject.toml  reserved_invetory copy.py  sp_api_transcation copy.py
app/: api_client.py  config.py  database.py  models.py
app/services/: all_orders.py  get_snl_status.py  manage_fba_inventory.py  reimbursements.py  reserved_inventory.py  sales_rank.py  transactions.py
legacy_scripts/: all_orders_sp_api.py  get_sales_rank.py  get_snl_registration_status.py  manage_fba_inventory_report.py  reimbursements_sp_api.py  reserved_inventory copy.py  sp_api_transcation copy.py
